[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/transition.gd" type="Script" id=1]
[ext_resource path="res://sound/music/music_big_stage.mp3" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("black:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1365, 805 ), Vector2( 1365, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("black:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1365, 0 ), Vector2( 1365, 805 ) ]
}

[node name="transition" type="Node2D"]
pause_mode = 2
z_index = 100
script = ExtResource( 1 )

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="black" type="ColorRect" parent="."]
margin_left = -39.0
margin_top = -40.0
margin_right = 1326.0
margin_bottom = -40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_fade" type="Tween" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
